WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137916
REGRESSION(
r174676
): It broke the !ENABLE(VIDEO) build
https://bugs.webkit.org/show_bug.cgi?id=137916
Summary
REGRESSION(r174676): It broke the !ENABLE(VIDEO) build
Csaba Osztrogonác
Reported
2014-10-21 04:53:37 PDT
error log: ../../Source/WebCore/rendering/RenderLayerBacking.cpp: In member function 'bool WebCore::RenderLayerBacking::isDirectlyCompositedImage() const': ../../Source/WebCore/rendering/RenderLayerBacking.cpp:1823:44: error: 'RenderMedia' was not declared in this scope ../../Source/WebCore/rendering/RenderLayerBacking.cpp:1823:67: error: no matching function for call to 'is(WebCore::RenderLayerModelObject&)' RenderMedia class is inside ENABLE(VIDEO) guard, that's why it causes build failure. The previous renderer().isMedia() worked, because isMedia() is defined unconditionally in RenderObject (returns false) - the base class of RenderMedia (returns true).
Attachments
Patch
(1.95 KB, patch)
2014-10-21 10:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2014-10-21 09:43:43 PDT
Thanks for the bug report Ossy, I'm on it!
Chris Dumez
Comment 2
2014-10-21 09:46:10 PDT
Committed
r174978
: <
http://trac.webkit.org/changeset/174978
>
Csaba Osztrogonác
Comment 3
2014-10-21 09:57:12 PDT
(In reply to
comment #2
)
> Committed
r174978
: <
http://trac.webkit.org/changeset/174978
>
But the whole RenderMedia.h is inside ENABLE(VIDEO) guard, it can't fix the build.
Chris Dumez
Comment 4
2014-10-21 09:58:56 PDT
Apparently did not fix the build.
Chris Dumez
Comment 5
2014-10-21 10:06:25 PDT
Created
attachment 240210
[details]
Patch
Chris Dumez
Comment 6
2014-10-21 10:07:07 PDT
Ossy, sorry about the quick / insufficient build fix. What do you think about this one?
Csaba Osztrogonác
Comment 7
2014-10-21 10:12:08 PDT
(In reply to
comment #6
)
> Ossy, sorry about the quick / insufficient build fix. What do you think > about this one?
Looks good for the error in the description, let me check if it is enough, maybe there are other issues later.
Csaba Osztrogonác
Comment 8
2014-10-21 10:33:34 PDT
Comment on
attachment 240210
[details]
Patch Thanks, I tested, it is enough to fix the build, r=me.
Chris Dumez
Comment 9
2014-10-21 10:34:17 PDT
(In reply to
comment #8
)
> Comment on
attachment 240210
[details]
> Patch > > Thanks, I tested, it is enough to fix the build, r=me.
Great, thanks for double-checking and sorry about the breakage.
WebKit Commit Bot
Comment 10
2014-10-21 11:09:48 PDT
Comment on
attachment 240210
[details]
Patch Clearing flags on attachment: 240210 Committed
r174989
: <
http://trac.webkit.org/changeset/174989
>
WebKit Commit Bot
Comment 11
2014-10-21 11:09:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug