REGRESSION(r174676): It broke the !ENABLE(VIDEO) build https://bugs.webkit.org/show_bug.cgi?id=137916

Unreviewed build fix. Add missing header include.

* rendering/RenderLayerBacking.cpp:

Canonical link: https://commits.webkit.org/155785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174978 268f45cc-cd09-0410-ab3c-d52691b4dbfc